@@ -203,6 +203,7 @@ Views 6.x-3.0-dev
     o #808044 by dereine: Backport field date test.
     o by dereine: Add a test for field math, and fix the field math :)
     o by dereine: Add a test for filter equality.
+    o by dereine: Add a test for field counter.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
